// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Avatar Default 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <span
    className="ant-avatar ant-avatar-circle"
    style={Object {}}
  >
    <span
      className="ant-avatar-string"
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      D
    </span>
  </span>
</div>
`;

exports[`Storyshots Avatar Icon 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <span
    className="ant-avatar ant-avatar-circle ant-avatar-icon"
    style={Object {}}
  >
    <svg
      className=""
      fill="#7E8083"
      height={32}
      width={32}
    >
      dassana.svg
    </svg>
  </span>
</div>
`;

exports[`Storyshots Button Default 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Default
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span>
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Loading 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <span
    className="container-0-1-3 container-d0-0-1-4"
  >
     
  </span>
</div>
`;

exports[`Storyshots Button Pending 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      style={
        Object {
          "paddingRight": 8,
        }
      }
    >
      <div
        className="ant-spin ant-spin-spinning"
      >
        <span
          aria-label="loading"
          className="anticon anticon-loading loading-0-1-5 loading-d0-0-1-6 ant-spin-dot"
          role="img"
        >
          <svg
            aria-hidden="true"
            className="anticon-spin"
            data-icon="loading"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </span>
      </div>
    </span>
    <span>
      Pending
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Primary 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    className="ant-btn ant-btn-primary"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
</div>
`;

exports[`Storyshots Button Primary Disabled 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    className="ant-btn ant-btn-primary"
    data-test="button"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span>
      Primary Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots Checkbox Default 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <label
    className="ant-checkbox-wrapper"
  >
    <span
      className="ant-checkbox"
      style={Object {}}
    >
      <input
        checked={false}
        className="ant-checkbox-input"
        data-test="checkbox"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <span
        className="ant-checkbox-inner"
      />
    </span>
  </label>
</div>
`;

exports[`Storyshots Checkbox Default Checked 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <label
    className="ant-checkbox-wrapper"
  >
    <span
      className="ant-checkbox ant-checkbox-checked"
      style={Object {}}
    >
      <input
        checked={true}
        className="ant-checkbox-input"
        data-test="checkbox"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <span
        className="ant-checkbox-inner"
      />
    </span>
  </label>
</div>
`;

exports[`Storyshots Checkbox Disabled 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <label
    className="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <span
      className="ant-checkbox ant-checkbox-disabled"
      style={Object {}}
    >
      <input
        checked={false}
        className="ant-checkbox-input"
        data-test="checkbox"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <span
        className="ant-checkbox-inner"
      />
    </span>
  </label>
</div>
`;

exports[`Storyshots Checkbox Disabled Checked 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <label
    className="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <span
      className="ant-checkbox ant-checkbox-checked ant-checkbox-disabled"
      style={Object {}}
    >
      <input
        checked={true}
        className="ant-checkbox-input"
        data-test="checkbox"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <span
        className="ant-checkbox-inner"
      />
    </span>
  </label>
</div>
`;

exports[`Storyshots Checkbox Label 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <label
    className="ant-checkbox-wrapper"
  >
    <span
      className="ant-checkbox"
      style={Object {}}
    >
      <input
        checked={false}
        className="ant-checkbox-input"
        data-test="checkbox"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <span
        className="ant-checkbox-inner"
      />
    </span>
    <span>
      Checkbox
    </span>
  </label>
</div>
`;

exports[`Storyshots ChipInput Default 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    className=""
    data-test="chip-input"
  >
    <div
      className="wrapper-0-1-13"
    >
      <input
        className="ant-input container-0-1-15 container-d0-0-1-18"
        data-test="input"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="@yourdomain.com"
        type="text"
        value=""
      />
      <div
        className="actionItem-0-1-7"
      >
        <span
          className="firstText-0-1-9"
        >
          press 
        </span>
        <span
          className="secondText-0-1-10"
        >
          enter
        </span>
        <span
          aria-label="enter"
          className="anticon anticon-enter"
          role="img"
          style={
            Object {
              "color": "#696A72",
            }
          }
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="enter"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="tagsWrapper-0-1-12 tagsWrapper-d0-0-1-14"
    >
      <span
        className="ant-tag tag-0-1-11"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        @lorem.com
      </span>
      <span
        className="ant-tag tag-0-1-11"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        @ipsum.com
        <span
          aria-label="close"
          className="anticon anticon-close ant-tag-close-icon"
          onClick={[Function]}
          role="img"
          tabIndex={-1}
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="container-0-1-19 container-d0-0-1-20"
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots ChipInput Full Width 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    className=""
    data-test="chip-input"
  >
    <div
      className="wrapper-0-1-13"
    >
      <input
        className="ant-input container-0-1-15 container-d1-0-1-22"
        data-test="input"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value=""
      />
      <div
        className="actionItem-0-1-7"
      >
        <span
          className="firstText-0-1-9"
        >
          press 
        </span>
        <span
          className="secondText-0-1-10"
        >
          enter
        </span>
        <span
          aria-label="enter"
          className="anticon anticon-enter"
          role="img"
          style={
            Object {
              "color": "#696A72",
            }
          }
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="enter"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="tagsWrapper-0-1-12 tagsWrapper-d1-0-1-21"
    />
    <div
      className="container-0-1-19 container-d1-0-1-23"
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots ChipInput Validated 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    className=""
    data-test="chip-input"
  >
    <div
      className="wrapper-0-1-13"
    >
      <input
        className="ant-input container-0-1-15 container-d2-0-1-25"
        data-test="input"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="@yourdomain.com"
        type="text"
        value=""
      />
      <div
        className="actionItem-0-1-7"
      >
        <span
          className="firstText-0-1-9"
        >
          press 
        </span>
        <span
          className="secondText-0-1-10"
        >
          enter
        </span>
        <span
          aria-label="enter"
          className="anticon anticon-enter"
          role="img"
          style={
            Object {
              "color": "#696A72",
            }
          }
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="enter"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 000 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="tagsWrapper-0-1-12 tagsWrapper-d2-0-1-24"
    >
      <span
        className="ant-tag tag-0-1-11"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        @lorem.com
      </span>
      <span
        className="ant-tag tag-0-1-11"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        @ipsum.com
        <span
          aria-label="close"
          className="anticon anticon-close ant-tag-close-icon"
          onClick={[Function]}
          role="img"
          tabIndex={-1}
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="container-0-1-19 container-d2-0-1-26"
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots ColoredDot Colored 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    className="container-0-1-27"
  >
    <p>
      Hover over colored dot to show tooltip.
    </p>
    <span
      className="coloredDot-0-1-29 dot-0-1-28"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Icon Custom 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <img
    alt="https://dummyimage.com/600x400/000/fff&text=Dassana"
    className=""
    height={64}
    src="https://dummyimage.com/600x400/000/fff&text=Dassana"
  />
</div>
`;

exports[`Storyshots Icon Predefined 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <svg
    className=""
    fill="#7E8083"
    height={64}
    width={64}
  >
    dassana.svg
  </svg>
</div>
`;

exports[`Storyshots IconButton Default 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <span
    className="iconButton-0-1-32"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-times fa-w-11 icon-0-1-31 icon-d0-0-1-33"
      data-icon="times"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots Input Default 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <input
    className="ant-input container-0-1-15 container-d3-0-1-34"
    data-test="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Disabled 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <input
    className="ant-input ant-input-disabled container-0-1-15 container-d9-0-1-41"
    data-test="input"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Error 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <input
    className="ant-input container-0-1-15 container-d8-0-1-40 error-0-1-16"
    data-test="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Full Width 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <input
    className="ant-input container-0-1-15 container-d7-0-1-39"
    data-test="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Input Loading 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    className="container-0-1-15 container-d6-0-1-37"
  >
    <div
      className="inputSkeleton-0-1-17"
    >
      <span
        className="container-0-1-3 container-d1-0-1-38"
      >
         
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Placeholder 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <input
    className="ant-input container-0-1-15 container-d4-0-1-35"
    data-test="input"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="Search..."
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots Link Click 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <a
    className="ant-typography"
    data-test="link"
    onClick={[Function]}
    style={
      Object {
        "WebkitLineClamp": null,
      }
    }
    target="_self"
  >
    <u>
      Click
    </u>
  </a>
</div>
`;

exports[`Storyshots Link Href 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <a
    className="ant-typography"
    data-test="link"
    href=" "
    style={
      Object {
        "WebkitLineClamp": null,
      }
    }
    target="_self"
  >
    <u>
      Href
    </u>
  </a>
</div>
`;

exports[`Storyshots Modal Default 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Open Modal
    </span>
  </button>
</div>
`;

exports[`Storyshots Notification Error 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Error
    </span>
  </button>
</div>
`;

exports[`Storyshots Notification Info 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Info
    </span>
  </button>
</div>
`;

exports[`Storyshots Notification Success 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Success
    </span>
  </button>
</div>
`;

exports[`Storyshots Notification Warning 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Warning
    </span>
  </button>
</div>
`;

exports[`Storyshots Notifications Error 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Error
    </span>
  </button>
</div>
`;

exports[`Storyshots Notifications Info 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Info
    </span>
  </button>
</div>
`;

exports[`Storyshots Notifications Success 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Success
    </span>
  </button>
</div>
`;

exports[`Storyshots Notifications Warning 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    className="ant-btn ant-btn-default"
    data-test="button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      Warning
    </span>
  </button>
</div>
`;

exports[`Storyshots Popover Default 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    style={
      Object {
        "padding": 75,
      }
    }
  >
    <span
      className=""
      data-test="popover-trigger"
      onClick={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className=""
        fill="#7E8083"
        height={32}
        width={32}
      >
        dassana.svg
      </svg>
    </span>
  </div>
</div>
`;

exports[`Storyshots Popover Title 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    style={
      Object {
        "padding": 75,
      }
    }
  >
    <span
      className=""
      data-test="popover-trigger"
      onClick={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className=""
        fill="#7E8083"
        height={32}
        width={32}
      >
        dassana.svg
      </svg>
    </span>
  </div>
</div>
`;

exports[`Storyshots Radio Group Default 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    className="ant-radio-group ant-radio-group-solid"
  >
    <label
      className="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        className="ant-radio-button ant-radio-button-checked"
        style={Object {}}
      >
        <input
          checked={true}
          className="ant-radio-button-input"
          disabled={false}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="radio"
          value="high"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        High
      </span>
    </label>
    <label
      className="ant-radio-button-wrapper"
    >
      <span
        className="ant-radio-button"
        style={Object {}}
      >
        <input
          checked={false}
          className="ant-radio-button-input"
          disabled={false}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="radio"
          value="medium"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        Medium
      </span>
    </label>
    <label
      className="ant-radio-button-wrapper"
    >
      <span
        className="ant-radio-button"
        style={Object {}}
      >
        <input
          checked={false}
          className="ant-radio-button-input"
          disabled={false}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="radio"
          value="low"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        Low
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Radio Group Loading 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    className="container-0-1-43"
  >
    <div
      className="skeletonButton-0-1-45"
    >
      <span
        className="container-0-1-3 container-d2-0-1-46 skeleton-0-1-44"
      >
         
      </span>
    </div>
    <div
      className="skeletonButton-0-1-45"
    >
      <span
        className="container-0-1-3 container-d3-0-1-47 skeleton-0-1-44"
      >
         
      </span>
    </div>
    <div
      className="skeletonButton-0-1-45"
    >
      <span
        className="container-0-1-3 container-d4-0-1-48 skeleton-0-1-44"
      >
         
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Group Partially Disabled 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    className="ant-radio-group ant-radio-group-solid"
  >
    <label
      className="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        className="ant-radio-button ant-radio-button-checked"
        style={Object {}}
      >
        <input
          checked={true}
          className="ant-radio-button-input"
          disabled={false}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="radio"
          value="high"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        High
      </span>
    </label>
    <label
      className="ant-radio-button-wrapper"
    >
      <span
        className="ant-radio-button"
        style={Object {}}
      >
        <input
          checked={false}
          className="ant-radio-button-input"
          disabled={false}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="radio"
          value="medium"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        Medium
      </span>
    </label>
    <label
      className="ant-radio-button-wrapper ant-radio-button-wrapper-disabled"
    >
      <span
        className="ant-radio-button ant-radio-button-disabled"
        style={Object {}}
      >
        <input
          checked={false}
          className="ant-radio-button-input"
          disabled={true}
          name="radioGroup"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="radio"
          value="low"
        />
        <span
          className="ant-radio-button-inner"
        />
      </span>
      <span>
        Low
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Select Default 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    className="decorator-0-1-49"
  >
    <div
      className="container-0-1-50 container-d0-0-1-54"
    >
      <div
        className="ant-select ant-select-single ant-select-show-arrow"
        data-test="select"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div
          className="ant-select-selector"
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <span
            className="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autoComplete="off"
              className="ant-select-selection-search-input"
              disabled={false}
              onChange={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onPaste={[Function]}
              readOnly={true}
              role="combobox"
              style={
                Object {
                  "opacity": 0,
                }
              }
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            className="ant-select-selection-placeholder"
          >
            
          </span>
        </div>
        <span
          aria-hidden={true}
          className="ant-select-arrow"
          onMouseDown={[Function]}
          style={
            Object {
              "WebkitUserSelect": "none",
              "userSelect": "none",
            }
          }
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Full Width 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    className="decorator-0-1-49"
  >
    <div
      className="container-0-1-50 container-d2-0-1-60"
    >
      <div
        className="ant-select ant-select-single ant-select-show-arrow"
        data-test="select"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div
          className="ant-select-selector"
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <span
            className="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autoComplete="off"
              className="ant-select-selection-search-input"
              disabled={false}
              onChange={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onPaste={[Function]}
              readOnly={true}
              role="combobox"
              style={
                Object {
                  "opacity": 0,
                }
              }
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            className="ant-select-selection-item"
          >
            <div
              className="option-0-1-57"
            >
              <span
                className="optionText-0-1-58"
                onMouseEnter={[Function]}
              >
                Lorem
              </span>
            </div>
          </span>
        </div>
        <span
          aria-hidden={true}
          className="ant-select-arrow"
          onMouseDown={[Function]}
          style={
            Object {
              "WebkitUserSelect": "none",
              "userSelect": "none",
            }
          }
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Icon 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    className="decorator-0-1-49"
  >
    <div
      className="container-0-1-50 container-d1-0-1-55"
    >
      <div
        className="ant-select ant-select-single ant-select-show-arrow"
        data-test="select"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div
          className="ant-select-selector"
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <span
            className="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autoComplete="off"
              className="ant-select-selection-search-input"
              disabled={false}
              onChange={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onPaste={[Function]}
              readOnly={true}
              role="combobox"
              style={
                Object {
                  "opacity": 0,
                }
              }
              type="search"
              unselectable="on"
              value=""
            />
          </span>
          <span
            className="ant-select-selection-item"
          >
            <div
              className="option-0-1-57"
            >
              <span
                className="icon-0-1-56"
              >
                <svg
                  className=""
                  fill="#7E8083"
                  height={15}
                  width={15}
                >
                  aws.svg
                </svg>
              </span>
              <span
                className="optionText-0-1-58"
                onMouseEnter={[Function]}
              >
                AWS
              </span>
            </div>
          </span>
        </div>
        <span
          aria-hidden={true}
          className="ant-select-arrow"
          onMouseDown={[Function]}
          style={
            Object {
              "WebkitUserSelect": "none",
              "userSelect": "none",
            }
          }
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Search 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    className="decorator-0-1-49"
  >
    <div
      className="container-0-1-50 container-d3-0-1-61"
    >
      <div
        className="ant-select ant-select-single ant-select-show-arrow ant-select-show-search"
        data-test="select"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div
          className="ant-select-selector"
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <span
            className="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autoComplete="off"
              className="ant-select-selection-search-input"
              disabled={false}
              onChange={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onPaste={[Function]}
              readOnly={false}
              role="combobox"
              style={
                Object {
                  "opacity": null,
                }
              }
              type="search"
              unselectable={null}
              value=""
            />
          </span>
          <span
            className="ant-select-selection-placeholder"
          >
            Choose a Cloud Provider
          </span>
        </div>
        <span
          aria-hidden={true}
          className="ant-select-arrow"
          onMouseDown={[Function]}
          style={
            Object {
              "WebkitUserSelect": "none",
              "userSelect": "none",
            }
          }
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Selected Option Width 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    className="decorator-0-1-49"
  >
    <div
      className="container-0-1-50 container-d4-0-1-62"
    >
      <div
        className="ant-select ant-select-single ant-select-show-arrow ant-select-show-search"
        data-test="select"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div
          className="ant-select-selector"
          onClick={[Function]}
          onMouseDown={[Function]}
        >
          <span
            className="ant-select-selection-search"
          >
            <input
              aria-activedescendant="undefined_list_0"
              aria-autocomplete="list"
              aria-controls="undefined_list"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-owns="undefined_list"
              autoComplete="off"
              className="ant-select-selection-search-input"
              disabled={false}
              onChange={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onPaste={[Function]}
              readOnly={false}
              role="combobox"
              style={
                Object {
                  "opacity": null,
                }
              }
              type="search"
              unselectable={null}
              value=""
            />
          </span>
          <span
            className="ant-select-selection-placeholder"
          >
            Choose a Cloud Provider
          </span>
        </div>
        <span
          aria-hidden={true}
          className="ant-select-arrow"
          onMouseDown={[Function]}
          style={
            Object {
              "WebkitUserSelect": "none",
              "userSelect": "none",
            }
          }
          unselectable="on"
        >
          <span
            aria-label="down"
            className="anticon anticon-down ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Skeleton Circle 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <span
    className="container-0-1-3 container-d6-0-1-64"
  >
     
  </span>
</div>
`;

exports[`Storyshots Skeleton Count 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <span
    className="container-0-1-3 container-d7-0-1-65"
  >
     
  </span>
  <span
    className="container-0-1-3 container-d7-0-1-65"
  >
     
  </span>
  <span
    className="container-0-1-3 container-d7-0-1-65"
  >
     
  </span>
  <span
    className="container-0-1-3 container-d7-0-1-65"
  >
     
  </span>
  <span
    className="container-0-1-3 container-d7-0-1-65"
  >
     
  </span>
</div>
`;

exports[`Storyshots Skeleton Default 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <span
    className="container-0-1-3 container-d5-0-1-63"
  >
     
  </span>
</div>
`;

exports[`Storyshots Tag Colored 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <span
    className="ant-tag ant-tag-has-color"
    style={
      Object {
        "backgroundColor": "#108ee9",
      }
    }
  >
    Colored
    <span
      aria-label="close"
      className="anticon anticon-close ant-tag-close-icon"
      onClick={[Function]}
      role="img"
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="close"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Storyshots Tag Default 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <span
    className="ant-tag"
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    Default
    <span
      aria-label="close"
      className="anticon anticon-close ant-tag-close-icon"
      onClick={[Function]}
      role="img"
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        className=""
        data-icon="close"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Storyshots Toggle Default 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    aria-checked={false}
    className="ant-switch"
    data-test="toggle"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    type="button"
  >
    <div
      className="ant-switch-handle"
    />
    <span
      className="ant-switch-inner"
    />
  </button>
</div>
`;

exports[`Storyshots Toggle Disabled 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    aria-checked={false}
    className="ant-switch ant-switch-disabled"
    data-test="toggle"
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    type="button"
  >
    <div
      className="ant-switch-handle"
    />
    <span
      className="ant-switch-inner"
    />
  </button>
</div>
`;

exports[`Storyshots Toggle Small 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <button
    aria-checked={false}
    className="ant-switch ant-switch-small"
    data-test="toggle"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="switch"
    type="button"
  >
    <div
      className="ant-switch-handle"
    />
    <span
      className="ant-switch-inner"
    />
  </button>
</div>
`;

exports[`Storyshots Tooltip Default 1`] = `
<div
  className="light storyWrapper-0-1-2"
>
  <div
    style={
      Object {
        "padding": 75,
      }
    }
  >
    <span
      className=""
      data-test="tooltip-trigger"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <svg
        className=""
        fill="#7E8083"
        height={32}
        width={32}
      >
        dassana.svg
      </svg>
    </span>
  </div>
</div>
`;
